--- a/BenMakesGames.Webdiatr/BenMakesGames.Webdiatr.csproj
+++ b/BenMakesGames.Webdiatr/BenMakesGames.Webdiatr.csproj
@@ -25,8 +25,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
         <PackageReference Include="MediatR" Version="12.4.1" />
-        <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
     </ItemGroup>
 
     <ItemGroup>
